data/forge_javadoc/1.7.10/processed/net_minecraft_client_model_ModelWolf.md
# ModelWolf

**Inheritance:** java.lang.Object → net.minecraft.client.model.ModelBase → net.minecraft.client.model.ModelWolf

## Class signature

```java
public class ModelWolf extends ModelBase
```

## Constructors

- `ModelWolf()`

## Methods

- `void render(Entity p_78088_1_, float p_78088_2_, float p_78088_3_, float p_78088_4_, float p_78088_5_, float p_78088_6_, float p_78088_7_)`
- `void setLivingAnimations(EntityLivingBase p_78086_1_, float p_78086_2_, float p_78086_3_, float p_78086_4_)`
- `void setRotationAngles(float p_78087_1_, float p_78087_2_, float p_78087_3_, float p_78087_4_, float p_78087_5_, float p_78087_6_, Entity p_78087_7_)`

## Fields

- `ModelRenderer wolfBody`
- `ModelRenderer wolfHeadMain`
- `ModelRenderer wolfLeg1`
- `ModelRenderer wolfLeg2`
- `ModelRenderer wolfLeg3`
- `ModelRenderer wolfLeg4`